--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,34 @@
 @import 'slick-carousel/slick/slick-theme.css'; */
 
 * {
-  font-family: 'IBM Plex Sans Thai', sans-serif;
+  font-family: "IBM Plex Sans Thai", sans-serif;
   font-size: 16px;
   margin: 0;
   padding: 0;
+}
+
+.txt-grad {
+  background: linear-gradient(180deg, rgba(255, 233, 155, 1) 0%, rgba(255, 171, 124, 1) 50%, rgba(255, 86, 80, 1) 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.icon-grad {
+  fill: url("#iconGrad");
+}
+
+.bg-sub-grad {
+  background: linear-gradient(180deg, rgba(255, 171, 124, 1) 0%, rgba(255, 86, 80, 1) 100%);
+}
+
+.bg-secondary {
+  background-color: #f8f8f8;
+}
+
+.shadow-container {
+  box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.3);
+}
+
+.shadow-input {
+  box-shadow: 6px 6px 10px rgba(0, 0, 0, 0.45);
 }
