--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,37 @@
 @import 'slick-carousel/slick/slick-theme.css'; */
 
 * {
-  font-family: 'IBM Plex Sans Thai', sans-serif;
-  font-size: 16px;
-  margin: 0;
-  padding: 0;
+    font-family: "IBM Plex Sans Thai", sans-serif;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+}
+
+.bg-primary-grad {
+    background: linear-gradient(
+        180deg,
+        rgba(255, 233, 155, 1) 0%,
+        rgba(255, 171, 124, 1) 50%,
+        rgba(255, 86, 80, 1) 100%
+    );
+}
+
+.forhover:hover {
+    background: linear-gradient(180deg, rgb(255, 229, 133) 0%, rgb(255, 151, 91) 50%, rgb(240, 56, 50) 100%);
+}
+
+.bg-sub-grad {
+    background: linear-gradient(180deg, rgba(255, 171, 124, 1) 0%, rgba(255, 86, 80, 1) 100%);
+}
+
+.bg-secondary {
+    background-color: #f8f8f8;
+}
+
+.shadow-container {
+    box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.3);
+}
+
+.shadow-input {
+    box-shadow: 6px 6px 10px rgba(0, 0, 0, 0.45);
 }
