--- a/src/App.css
+++ b/src/App.css
@@ -2,52 +2,52 @@
 @import 'slick-carousel/slick/slick-theme.css'; */
 
 * {
-    font-family: "IBM Plex Sans Thai", sans-serif;
-    font-size: 16px;
-    margin: 0;
-    padding: 0;
+  font-family: "IBM Plex Sans Thai", sans-serif;
+  font-size: 16px;
+  margin: 0;
+  padding: 0;
 }
 
 .icon-grad {
-    fill: url("#iconGrad");
+  fill: url("#iconGrad");
 }
 
 .boxEle {
-    width: 130px;
-    height: 20px;
-    color: #929292;
+  width: 130px;
+  height: 20px;
+  color: #929292;
 }
 
 .boxProfile {
-    border-radius: 125px 27px 27px 125px;
+  border-radius: 125px 27px 27px 125px;
 }
 
+/* background color */
 .bg-primary-grad {
-    background: linear-gradient(
-        180deg,
-        rgba(255, 233, 155, 1) 0%,
-        rgba(255, 171, 124, 1) 50%,
-        rgba(255, 86, 80, 1) 100%
-    );
+  background: linear-gradient(180deg, rgba(255, 233, 155, 1) 0%, rgba(255, 171, 124, 1) 50%, rgba(255, 86, 80, 1) 100%);
 }
 
 .bg-sub-grad {
-    background: linear-gradient(180deg, rgba(255, 171, 124, 1) 0%, rgba(255, 86, 80, 1) 100%);
+  background: linear-gradient(180deg, rgba(255, 171, 124, 1) 0%, rgba(255, 86, 80, 1) 100%);
+}
+
+.bg-chat-container {
+  background: #e5e5e5;
 }
 
 .bg-secondary {
-    background-color: #f8f8f8;
+  background-color: #f8f8f8;
 }
 
 .shadow-container {
-    box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.3);
+  box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.3);
 }
 
 .shadow-input {
-    box-shadow: 6px 6px 10px rgba(0, 0, 0, 0.45);
+  box-shadow: 6px 6px 10px rgba(0, 0, 0, 0.45);
 }
 .forhover:hover {
-    background: linear-gradient(180deg, rgb(255, 229, 133) 0%, rgb(255, 151, 91) 50%, rgb(240, 56, 50) 100%);
+  background: linear-gradient(180deg, rgb(255, 229, 133) 0%, rgb(255, 151, 91) 50%, rgb(240, 56, 50) 100%);
 }
 
 .bg-primary-grad {
