--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@import 'slick-carousel/slick/slick.css';
+@import 'slick-carousel/slick/slick-theme.css';
 body {
   background-color: #f8f8f8;
   margin: 0;
