--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,36 @@
 @import 'slick-carousel/slick/slick-theme.css'; */
 
 * {
-  font-family: 'IBM Plex Sans Thai', sans-serif;
+  font-family: "IBM Plex Sans Thai", sans-serif;
   font-size: 16px;
   margin: 0;
   padding: 0;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 0.5rem;
+  /* height: 0.5rem; */
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  /* border-radius: 100vh; */
+  /* background: #edf2f7; */
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  /* background: #cbd5e0; */
+  background: linear-gradient(180deg, rgba(255, 233, 155, 1) 0%, rgba(255, 171, 124, 1) 50%, rgba(255, 86, 80, 1) 100%);
+  border-radius: 100vh;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(180deg, rgb(255, 229, 133) 0%, rgb(255, 151, 91) 50%, rgb(240, 56, 50) 100%);
+}
+
 .heigt100 {
   height: 100%;
 }
@@ -14,7 +39,7 @@
   width: 100%;
 }
 .icon-grad {
-  fill: url('#iconGrad');
+  fill: url("#iconGrad");
 }
 
 .boxEle {
