--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 * {
-  font-family: 'IBM Plex Sans Thai', sans-serif;
+  font-family: "IBM Plex Sans Thai", sans-serif;
   font-size: 16px;
   margin: 0;
   padding: 0;
@@ -36,7 +36,7 @@
   width: 100%;
 }
 .icon-grad {
-  fill: url('#iconGrad');
+  fill: url("#iconGrad");
 }
 
 /* text area */
