--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@
   padding: 0;
 }
 
+input:focus {
+  outline: none;
+}
+
 /* width */
 ::-webkit-scrollbar {
   width: 0.5rem;
@@ -108,6 +112,12 @@
   color: #7b7b7b;
 }
 
+.text-dark-thin * {
+  color: #ff4949;
+  font-weight: 300;
+  font-size: 13px;
+}
+
 /* border */
 .header-border {
   border-bottom: 2px solid #ff4a4a;
@@ -125,4 +135,20 @@
 .forHoverButtonPost:hover {
   background: linear-gradient(180deg, rgb(255, 229, 133) 0%, rgb(255, 151, 91) 50%, rgb(240, 56, 50) 100%);
   /* border: none; */
+}
+
+@media screen and (max-width: 1024px) {
+  .maxwidth {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .minwidth {
+    display: none;
+  }
+  /* login-register container responsive */
+  .login-container {
+    height: 92vh;
+  }
 }
