--- a/src/App.css
+++ b/src/App.css
@@ -126,6 +126,10 @@ input:focus {
   border-radius: 50px;
 }
 
+.whiteBtnHover:hover {
+  background: rgb(246, 246, 246);
+}
+
 .forhover:hover {
   background: linear-gradient(180deg, rgb(255, 229, 133) 0%, rgb(255, 151, 91) 50%, rgb(240, 56, 50) 100%);
 }
