--- a/src/App.css
+++ b/src/App.css
@@ -127,7 +127,7 @@ input:focus {
 }
 
 .profile-title {
-  border-radius: 5.5rem 5.5rem 0 0;
+  border-radius: 5.5rem 5.5rem 5rem 5rem;
 }
 
 .whiteBtnHover:hover {
