post component private preview

--- a/src/App.css
+++ b/src/App.css
@@ -1,179 +1,192 @@
 * {
-    font-family: "IBM Plex Sans Thai", sans-serif;
-    font-size: 16px;
-    margin: 0;
-    padding: 0;
+  font-family: "IBM Plex Sans Thai", sans-serif;
+  font-size: 16px;
+  margin: 0;
+  padding: 0;
 }
 
 input:focus {
-    outline: none;
+  outline: none;
 }
 
 /* width */
 ::-webkit-scrollbar {
-    width: 0.5rem;
-    /* height: 0.5rem; */
+  width: 0.5rem;
+  /* height: 0.5rem; */
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-    /* border-radius: 100vh; */
-    /* background: #edf2f7; */
+  /* border-radius: 100vh; */
+  /* background: #edf2f7; */
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    /* background: #cbd5e0; */
-    background: linear-gradient(
-        180deg,
-        rgba(255, 233, 155, 1) 0%,
-        rgba(255, 171, 124, 1) 50%,
-        rgba(255, 86, 80, 1) 100%
-    );
-    border-radius: 100vh;
+  /* background: #cbd5e0; */
+  background: linear-gradient(180deg, rgba(255, 233, 155, 1) 0%, rgba(255, 171, 124, 1) 50%, rgba(255, 86, 80, 1) 100%);
+  border-radius: 100vh;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: linear-gradient(180deg, rgb(255, 229, 133) 0%, rgb(255, 151, 91) 50%, rgb(240, 56, 50) 100%);
+  background: linear-gradient(180deg, rgb(255, 229, 133) 0%, rgb(255, 151, 91) 50%, rgb(240, 56, 50) 100%);
 }
 
 .heigt100 {
-    height: 100%;
+  height: 100%;
 }
 .width100 {
-    width: 100%;
+  width: 100%;
 }
 .icon-grad {
-    fill: url("#iconGrad");
+  fill: url("#iconGrad");
 }
 
 /* text area */
 
 .textInput {
-    resize: none;
+  resize: none;
 }
 
 .boxEle {
-    width: 130px;
-    color: #929292;
+  width: 130px;
+  color: #929292;
 }
 
 .boxProfile {
-    border-radius: 125px 0px;
+  border-radius: 125px 0px;
 }
 
 /* background color */
 .bg-primary-grad {
-    background: linear-gradient(
-        180deg,
-        rgba(255, 233, 155, 1) 0%,
-        rgba(255, 171, 124, 1) 50%,
-        rgba(255, 86, 80, 1) 100%
-    );
+  background: linear-gradient(180deg, rgba(255, 233, 155, 1) 0%, rgba(255, 171, 124, 1) 50%, rgba(255, 86, 80, 1) 100%);
 }
 
 .bg-sub-grad {
-    background: linear-gradient(180deg, rgba(255, 171, 124, 1) 0%, rgb(255, 130, 80) 100%);
+  background: linear-gradient(180deg, rgba(255, 171, 124, 1) 0%, rgb(255, 130, 80) 100%);
 }
 
 .bg-chat-container {
-    background: #e5e5e5;
+  background: #e5e5e5;
 }
 
 .bg-secondary {
-    background-color: #f8f8f8;
+  background-color: #f8f8f8;
 }
 
 .shadow-container {
-    box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.3);
+  box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.3);
 }
 
 .shadow-input {
-    box-shadow: 6px 6px 10px rgba(0, 0, 0, 0.45);
+  box-shadow: 6px 6px 10px rgba(0, 0, 0, 0.45);
 }
 .forhover:hover {
-    background: linear-gradient(180deg, rgb(255, 229, 133) 0%, rgb(255, 151, 91) 50%, rgb(240, 56, 50) 100%);
+  background: linear-gradient(180deg, rgb(255, 229, 133) 0%, rgb(255, 151, 91) 50%, rgb(240, 56, 50) 100%);
 }
 
 .bg-primary-grad {
-    background: linear-gradient(
-        180deg,
-        rgba(255, 233, 155, 1) 0%,
-        rgba(255, 171, 124, 1) 50%,
-        rgba(255, 86, 80, 1) 100%
-    );
+  background: linear-gradient(180deg, rgba(255, 233, 155, 1) 0%, rgba(255, 171, 124, 1) 50%, rgba(255, 86, 80, 1) 100%);
 }
 
 .bg-sub-grad {
-    background: linear-gradient(180deg, rgba(255, 171, 124, 1) 0%, rgba(255, 86, 80, 1) 100%);
+  background: linear-gradient(180deg, rgba(255, 171, 124, 1) 0%, rgba(255, 86, 80, 1) 100%);
 }
 
 .bg-secondary {
-    background-color: #f8f8f8;
+  background-color: #f8f8f8;
 }
 
 .shadow-container {
-    box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.3);
+  box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.4);
 }
 
 .shadow-input {
-    box-shadow: 6px 6px 10px rgba(0, 0, 0, 0.45);
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.45);
+}
+
+.blur {
+  filter: blur(20px);
 }
 
 /* font */
 .text-dark {
-    color: #7b7b7b;
+  color: #7b7b7b;
 }
 
 .text-dark-thin * {
-    color: #ff4949;
-    font-weight: 300;
-    font-size: 13px;
+  color: #ff4949;
+  font-weight: 300;
+  font-size: 13px;
 }
 
 /* border */
 .header-border {
-    border-bottom: 2px solid #ff4a4a;
+  border-bottom: 2px solid #ff4a4a;
 }
 
 .border-50 {
-    border-radius: 50px;
+  border-radius: 50px;
 }
 
 .profile-title {
-    border-radius: 5.5rem 5.5rem 5rem 5rem;
+  border-radius: 5.5rem 5.5rem 5rem 5rem;
 }
 
 .whiteBtnHover:hover {
-    background: rgb(246, 246, 246);
+  background: rgb(246, 246, 246);
 }
 
 .forhover:hover {
-    background: linear-gradient(180deg, rgb(255, 229, 133) 0%, rgb(255, 151, 91) 50%, rgb(240, 56, 50) 100%);
+  background: linear-gradient(180deg, rgb(255, 229, 133) 0%, rgb(255, 151, 91) 50%, rgb(240, 56, 50) 100%);
 }
 
 /* hoverbutton Private */
 .forHoverButtonPost:hover {
-    background: linear-gradient(180deg, rgb(255, 229, 133) 0%, rgb(255, 151, 91) 50%, rgb(240, 56, 50) 100%);
-    /* border: none; */
+  background: linear-gradient(180deg, rgb(255, 229, 133) 0%, rgb(255, 151, 91) 50%, rgb(240, 56, 50) 100%);
+  /* border: none; */
+}
+
+.private {
+  box-shadow: 6px 6px 10px rgb(255, 130, 80);
+  /* border: 2px solid red; */
+  animation: private 2s infinite;
+}
+/* .private:hover {
+  animation: none;
+} */
+
+@keyframes private {
+  0% {
+    box-shadow: 6px 6px 10px rgb(255, 229, 133);
+    box-shadow: 6px 6px 20px rgb(255, 169, 135);
+  }
+  50% {
+    box-shadow: 6px 6px 40px rgb(255, 204, 122);
+    box-shadow: 6px 6px 60px rgb(255, 169, 135);
+  }
+  100% {
+    box-shadow: 6px 6px 10px rgb(255, 229, 133);
+    box-shadow: 6px 6px 20px rgb(255, 169, 135);
+  }
 }
 
 @media screen and (max-width: 1024px) {
-    .maxwidth {
-        display: none;
-    }
-    .profile-title {
-        border-radius: 0;
-    }
+  .maxwidth {
+    display: none;
+  }
+  .profile-title {
+    border-radius: 0;
+  }
 }
 
 @media screen and (min-width: 1024px) {
-    .minwidth {
-        display: none;
-    }
-    /* login-register container responsive */
-    .login-container {
-        height: 92vh;
-    }
+  .minwidth {
+    display: none;
+  }
+  /* login-register container responsive */
+  .login-container {
+    height: 92vh;
+  }
 }
