--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import "slick-carousel/slick/slick.css";
-@import "slick-carousel/slick/slick-theme.css";
-@import "react-loader-spinner/dist/loader/css/react-spinner-loader.css";
+@import 'slick-carousel/slick/slick.css';
+@import 'slick-carousel/slick/slick-theme.css';
+@import 'react-loader-spinner/dist/loader/css/react-spinner-loader.css';
 
 body {
-    background-color: #f8f8f8;
-    margin: 0;
-    font-family: "IBM Plex Sans Thai";
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  background-color: #f8f8f8;
+  margin: 0;
+  font-family: 'IBM Plex Sans Thai';
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  /* height: auto; */
 }
 
 code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
