finish login and register page

--- a/src/App.css
+++ b/src/App.css
@@ -123,7 +123,7 @@ input:focus {
 
 /* border */
 .header-border {
-  border-bottom: 2px solid #ff4a4a;
+  border-bottom: 2px solid rgba(255, 171, 124, 1);
 }
 
 .border-50 {
@@ -205,14 +205,15 @@ input:focus {
 
 .dark-bg {
   /* background-color: rgb(14, 24, 39); */
-  background-color: rgba(24, 24, 24);
+  /* background-color: rgba(24, 24, 24); */
+  background-color: rgba(40, 40, 40);
 }
 
 .dark-bg2 {
   /* background-color: rgba(48, 48, 48); */
   /* background-color: rgba(54, 54, 54); */
   /* background-color: rgba(53, 54, 58); */
-  background-color: rgba(53, 54, 58);
+  background-color: rgba(55, 55, 55);
   /* background-color: rgb(66, 66, 66); */
 }
 
@@ -238,4 +239,8 @@ input:focus {
 
 .dark-bga {
   background-color: rgba(0, 0, 0, 0.45);
+}
+
+.h {
+  height: max-content;
 }
