fix darkmode done

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 * {
-  font-family: 'IBM Plex Sans Thai', sans-serif;
+  font-family: "IBM Plex Sans Thai", sans-serif;
   font-size: 16px;
   margin: 0;
   padding: 0;
@@ -40,7 +40,7 @@ input:focus {
   width: 100%;
 }
 .icon-grad {
-  fill: url('#iconGrad');
+  fill: url("#iconGrad");
 }
 .hoverBtnMyProfile:hover {
   background-color: rgba(223, 215, 215, 0.37);
@@ -191,7 +191,7 @@ input:focus {
     border-radius: 0;
   }
   .h-login {
-    height: 120vh;
+    height: 100vh;
   }
   /* .h {
     height: 100vh;
