--- a/src/App.css
+++ b/src/App.css
@@ -137,7 +137,7 @@ input:focus {
 }
 
 .profile-title {
-  border-radius: 5.5rem 5.5rem 5rem 5rem;
+  border-radius: 5.5rem 5.5rem 5.5rem 5.5rem;
 }
 
 .whiteBtnHover:hover {
@@ -163,6 +163,10 @@ input:focus {
 /* .private:hover {
   animation: none;
 } */
+
+.input-comment:focus {
+  outline: none;
+}
 
 @keyframes private {
   0% {
